<resources>
  <string name="app_name">Umbrella</string>
  <!-- Example General settings -->
  <string name="action_settings">Settings</string>
  <string name="title_zip_code">Zip Code</string>
  <string name="summary_zip_code">Zip Code</string>
  <string name="title_auto_upload">Auto upload</string>
  <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
  <string name="title_units">Units</string>
  <string name="select_measurements">Select the Unit of Measurement</string>

  <string name="key_zip_code">key_zip_code</string>
  <string name="key_units">key_units</string>
  <string name="default_metric_value">metric</string>

</resources>
