<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory >
        <EditTextPreference
            android:defaultValue="@string/summary_zip_code"
            android:key="@string/key_zip_code"
            android:summary="@string/summary_zip_code"
            android:title="@string/title_zip_code" />

        <ListPreference
            android:defaultValue="@string/default_metric_value"
            android:dialogTitle="@string/title_units"
            android:entries="@array/pref_units_entries"
            android:entryValues="@array/pref_units_values"
            android:key="@string/key_units"
            android:summary="@string/select_measurements"
            android:title="@string/title_units" />

    </PreferenceCategory>

</PreferenceScreen>